10597
Fun with when things happen. I guess when you supply type args the monomorphic alternative is cut out of overloading consideration.
```scala

scala> new C[T1 forSome { type T1 }, T2 forSome { type T2 }](null)
warning: there were 2 feature warning(s); re-run with -feature for details
res0: C[T1 forSome { type T1 },T2 forSome { type T2 }] = C@3839e07a

scala> new C(null: C[T1 forSome { type T1 }, T2 forSome { type T2 }])
<console>:8: error: type mismatch;
 found   : C[T1 forSome { type T1 },T2 forSome { type T2 }]
 required: Int
              new C(null: C[T1 forSome { type T1 }, T2 forSome { type T2 }])
                        ^
```
